assets/css/style.css
/* ... */
.z-11 {
    z-index: 11;
}

.terminal-header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 1.5em;
    background-color: #333;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    padding: 0 0.4em;
    box-sizing: border-box;
}

.terminal-controls {
    float: left;
}

.control {
    display: inline-block;
    width: 0.6em;
    height: 0.6em;
    margin-left: 0.4em;
    border-radius: 50%;
    background-color: #777;
}

.backdrop-fliter {
    backdrop-filter: blur(16.5px);
}

.control.close {
    background-color: #e33;
    cursor: pointer;
}

.control.minimize {
    background-color: #ee0;
    cursor: pointer;
}

.control.maximize {
    background-color: #0b0;
    cursor: pointer;
}

.terminal-title {
    float: right;
    line-height: 1.5em;
    color: #eee;
}

.text {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    border-right: 0.2em solid green;
    /* Cursor */
    animation: typeAndDelete 4s steps(14) infinite,
        blinkCursor 0.5s step-end infinite alternate;
    margin-top: 1.5em;
}

/* header */
.container {
    max-width: 1140px !important;
}

.header-bg-img {
    background-image: url(../images/header-bg-img.webp);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: unset;
    padding-bottom: 20px;
}

.container-custom1 {
    max-width: 1360px;
    padding-left: 12px;
    padding-right: 12px;
    margin-left: auto;
    margin-right: auto;
}

.cursor-pointer {
    cursor: pointer;
}

.gap-between-nav-icon {
    gap: 35px;
}

.nav-button {
    padding: 13px 32px;
    color: var(--white1);
    background: linear-gradient(160deg, rgba(0, 136, 255, 0.58) -14.36%, #0069E3 113.71%);
    box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.50);
    position: relative;
    z-index: 1;
    border-radius: 40px;
    transition: color 300ms linear;
    border: 2px solid transparent;
}

.nav-button::before {
    background: var(--black);
    border: 2px solid var(--white1);
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    z-index: -1;
    opacity: 0;
    border-radius: 40px;
    transition: opacity 300ms linear;
}

.nav-button:hover::before {
    opacity: 1;
}

.nav-button:hover {
    color: var(--white1);
}

.line1,
.line2,
.line3 {
    transition: all .3s linear;
}

ol,
ul {
    padding-left: 0 !important;
}


.nav-bar-bg {
    border-bottom: 1px solid rgba(251, 253, 255, 0.20);
    background: rgba(251, 253, 255, 0.01);
}

.nav-icon {
    position: relative;
}

.nav-icon::after {
    position: absolute;
    content: "";
    width: 0;
    right: 0;
    bottom: -10%;
    height: 3px;
    border-radius: 30px;
    background-color: var(--offwhite2);
    transition: all 300ms linear;
}

.nav-icon:hover::after {
    width: 100%;
    left: 0;
}

/* hero-section */
.hero-section-line {
    max-width: 109px;
    width: 100%;
    border: 1px solid var(--blue);
    opacity: 100% !important;
}

.hero-section-padding {
    padding-top: 81px;
}

.hero-section-para {
    max-width: 515px;
    line-height: 170%;
}

.request {
    padding: 13px 32px;
    color: var(--white1);
    background: linear-gradient(160deg, rgba(0, 136, 255, 0.58) -14.36%, #0069E3 113.71%);
    box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.50);
    position: relative;
    z-index: 1;
    border-radius: 40px;
    transition: color 300ms linear;

}

.request::before {
    background: var(--black);
    border: 2px solid var(--white1);
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    z-index: -1;
    opacity: 0;
    border-radius: 40px;
    transition: opacity 300ms linear;
}

.request:hover::before {
    opacity: 1;
}

.request:hover {
    color: var(--white1);
}

.hero-section-big-box {
    max-width: 1437px;
    padding-left: 12px;
    padding-right: 12px;
    margin-left: auto;
    margin-right: auto;
}

.transform-big-img {
    transform: translateY(0%);
}

.gap-between-icon {
    gap: 40px;
}

.opacity-7 {
    opacity: 0.7;
}

.hero-slider .slick-prev:before,
.slick-next:before {
    display: none;
}

.hero-slider .slick-next {
    right: 0px !important;
}

.slider1-img {
    filter: grayscale(100%) !important;
    mix-blend-mode: multiply;
    margin: auto;
}

.slider1-img1 {
    filter: grayscale(100%) !important;
    mix-blend-mode: multiply;
    max-width: 130px;
    margin: auto;
}

.slider1-img:hover,
.slider1-img1:hover {
    filter: grayscale(0) !important;
}

/* section2 */
.s2-box {
    max-width: unset;
}

.s2-padding {
    margin-top: unset;
    padding-bottom: 25px;
}

.watch,
.watch1 {
    padding: 13px 32px;
    color: var(--white1);
    background: linear-gradient(160deg, rgba(0, 136, 255, 0.58) -14.36%, #0069E3 113.71%);
    box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.50);
    position: relative;
    z-index: 1;
    border-radius: 40px;
    transition: color 300ms linear;
    border: 2px solid transparent;
}

.watch::before,
.watch1::before {
    background: var(--black);
    border: 2px solid var(--white1);
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    position: absolute;
    z-index: -1;
    opacity: 0;
    border-radius: 40px;
    transition: opacity 300ms linear;
}

.watch1:hover::before,
.watch:hover::before {
    opacity: 1;
}

.watch:hover,
.watch1:hover {
    color: var(--white1);
}

/* section3 */
.s3-padding {
    padding-top: 50px;
    padding-bottom: 50px;
}

.watch1 {
    border-radius: 40px;
    background: linear-gradient(160deg, rgba(0, 136, 255, 0.58) -14.36%, #0069E3 113.71%);
    box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.50);
    padding: 13px 32px;
    border: 0;
    margin-top: 10px;
    transition: all 300ms linear;
}
/* ... */

